# libsql

./: .gitignore  Makefile.am  PROVENANCE  README.md  configure.ac  connect.c  defaults.c  engine.c  engine.h  error.c  field.c  isql.c  libsql-engine.h  libsql-uninstalled.pc.in  libsql.h  libsql.pc.in  p_libsql.h  schema.c  statement.c  vasprintf.c
debian/: .gitignore  changelog  control  libsql-dev.dirs  libsql-dev.install  libsql.install  rules  sql-utils.install
libedit/: .gitignore
m4/: Makefile.am  cc.m4  docs.m4  libedit.m4  liburi.m4  mysql.m4  nls.m4  prefix.m4  uuid.m4
mysql/: Makefile.am  mysql-connect.c  mysql-engine.c  mysql-field.c  mysql-query.c  mysql-schema.c  mysql-statement.c  p_mysql.h
